# CrewAI-POC

./: README.md  pyproject.toml
Trip Palnner POC/: agents.py  pip 2.ini
